2004-09-30  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphelp.c (gimp_help_get_locales): fixed brokeness
	I introduced with my last cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14919 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-30  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphelp.c (gimp_help_get_locales): fixed brokeness
+	I introduced with my last cleanup.
+
 2004-09-29  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/plug-ins/gimpfu.py: applied slightly tweaked patch
