--- a/README
+++ b/README
@@ -61,7 +61,8 @@ people will only want to be subscribed to gimp-user. If you want to
 help develop The GIMP, the gimp-developer mailing list is a good
 starting point.
 
-There is also a mailing list, "gimpwin-users", dedicated to users of the Win32 port.  To subscribe, send an empty message to
+There is also a mailing list, "gimpwin-users", dedicated to users of the
+Win32 port.  To subscribe, send an empty message to
 
 	gimpwin-users-subscribe@egroups.com
 
