--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,5 +1,9 @@
 2004-09-30  Sven Neumann  <sven@gimp.org>
 
+	* de.po: updated german translation.
+
+2004-09-30  Sven Neumann  <sven@gimp.org>
+
 	* POTFILES.in: updated.
 
 2004-09-28  Abel Cheung  <maddog@linuxhall.org>
