2004-09-30  Michael Natterer  <mitch@gimp.org>
	* plug-ins/script-fu/script-fu-types.h (struct SFScript): renamed
	member "decription" to "menu_path".

	* plug-ins/script-fu/script-fu-interface.c: changed accordingly.

	* plug-ins/script-fu/script-fu-scripts.c: ditto. Don't pass the
	menu_path as "blurb" to gimp_install_temp_proc(). Instead,
	pass "help" as "blurb" and nothing as "help".

	* plug-ins/script-fu/scripts/test-sphere.scm: shortened overly
	long and useless help text.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14928 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2004-09-30  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/script-fu/script-fu-types.h (struct SFScript): renamed
+	member "decription" to "menu_path".
+
+	* plug-ins/script-fu/script-fu-interface.c: changed accordingly.
+
+	* plug-ins/script-fu/script-fu-scripts.c: ditto. Don't pass the
+	menu_path as "blurb" to gimp_install_temp_proc(). Instead,
+	pass "help" as "blurb" and nothing as "help".
+
+	* plug-ins/script-fu/scripts/test-sphere.scm: shortened overly
+	long and useless help text.
+
+2004-09-30  Michael Natterer  <mitch@gimp.org>
+
 	* plug-ins/dbbrowser/gimpprocbox.c: don't include
 	"libgimp/stdplugins-intl.h".
 
