2004-09-30  Michael Natterer  <mitch@gimp.org>
	* libgimp/libgimp-sections.txt: moved stuff to right section.

	* libgimp/tmpl/gimppalettes.sgml
	* libgimp/tmpl/gimppaletteselect.sgml: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14929 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-30  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt: moved stuff to right section.
+
+	* libgimp/tmpl/gimppalettes.sgml
+	* libgimp/tmpl/gimppaletteselect.sgml: regenerated.
+
 2004-09-29  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-docs.sgml
