2004-10-01  Sven Neumann  <sven@gimp.org>
	* app/display/gimpdisplayshell-callbacks.c: no need to include
	gimpdisplayshell-render.h here.

	* app/display/gimpdisplayshell-draw.c
	* app/display/gimpdisplayshell-render.[ch]

	* app/display/gimpdisplayshell.[ch]: added an API to highlight a
	rectangle (specified in image coordinates). Actually it doesn't
	highlight but dims the area outside the rectangle.

	* app/tools/gimpcroptool.c: use the new functionality to show the
	area to be cropped. Fixes bug #93360.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14931 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2004-10-01  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-callbacks.c: no need to include
+	gimpdisplayshell-render.h here.
+
+	* app/display/gimpdisplayshell-draw.c
+	* app/display/gimpdisplayshell-render.[ch]
+
+	* app/display/gimpdisplayshell.[ch]: added an API to highlight a
+	rectangle (specified in image coordinates). Actually it doesn't
+	highlight but dims the area outside the rectangle.
+
+	* app/tools/gimpcroptool.c: use the new functionality to show the
+	area to be cropped. Fixes bug #93360.
+
 2004-09-30  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/script-fu/script-fu-types.h (struct SFScript): renamed
