--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-01  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated.
+
 2004-09-30  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: updated.
