* plug-ins/common/apply_lens.c: added a preview.  This plug-in still need   some work.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14938 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-02  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/apply_lens.c: added a preview.  This plug-in still
+	need some work.
+
 2004-10-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/display/gimpdisplayshell-callbacks.c
