* plug-ins/common/illusion.c: use a GimpAspectPreview so the preview is now   resizable.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14939 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-02  DindinX  <dindinx@gimp.org>
 
+	* plug-ins/common/illusion.c: use a GimpAspectPreview so the preview
+	is now resizable.
+
+2004-10-02  DindinX  <dindinx@gimp.org>
+
 	* plug-ins/common/apply_lens.c: added a preview.  This plug-in still
 	need some work.
 
