* plug-ins/common/mapcolor.c: use a GimpAspectPreview and made the code   much simpler.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14940 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-02  DindinX  <dindinx@gimp.org>
 
+	* plug-ins/common/mapcolor.c: use a GimpAspectPreview and made the
+	code much simpler.
+
+2004-10-02  DindinX  <dindinx@gimp.org>
+
 	* plug-ins/common/illusion.c: use a GimpAspectPreview so the preview
 	is now resizable.
 
