* en_CA.po: Updated Canadian English translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14942 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/en_CA.po
+++ b/tips/en_CA.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp tips\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-23 12:52-0400\n"
-"PO-Revision-Date: 2004-09-23 16:49-0400\n"
+"POT-Creation-Date: 2004-10-02 19:50-0400\n"
+"PO-Revision-Date: 2004-10-02 16:49-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: English/Canadian <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgid ""
 "<tt>Alt</tt>-click on the layer mask's preview in the Layers dialog toggles "
 "viewing the mask directly."
 msgstr ""
-"<tt>Alt</tt>-click on the layer mask's preview in the Layers dialog toggles "
+"<tt>Alt</tt>-click on the layer mask's preview in the Layers dialogue toggles "
 "viewing the mask directly."
 
 #: tips/gimp-tips.xml.in.h:3
@@ -33,7 +33,7 @@ msgid ""
 "<tt>Ctrl</tt>-click on the layer mask's preview in the Layers dialog toggles "
 "the effect of the layer mask."
 msgstr ""
-"<tt>Ctrl</tt>-click on the layer mask's preview in the Layers dialog toggles "
+"<tt>Ctrl</tt>-click on the layer mask's preview in the Layers dialogue toggles "
 "the effect of the layer mask."
 
 #: tips/gimp-tips.xml.in.h:4
@@ -57,7 +57,7 @@ msgid ""
 "<tt>Shift</tt>-click on the eye icon in the Layers dialog to hide all layers "
 "but that one. <tt>Shift</tt>-click again to show all layers."
 msgstr ""
-"<tt>Shift</tt>-click on the eye icon in the Layers dialog to hide all layers "
+"<tt>Shift</tt>-click on the eye icon in the Layers dialogue to hide all layers "
 "but that one. <tt>Shift</tt>-click again to show all layers."
 
 #: tips/gimp-tips.xml.in.h:7
@@ -69,7 +69,7 @@ msgid ""
 msgstr ""
 "A floating selection must be anchored to a new layer or to the last active "
 "layer before doing other operations on the image. Click on the &quot;New "
-"Layer&quot; or the &quot;Anchor Layer&quot; button in the Layers dialog, or "
+"Layer&quot; or the &quot;Anchor Layer&quot; button in the Layers dialogue, or "
 "use the menus to do the same."
 
 #: tips/gimp-tips.xml.in.h:8
@@ -81,7 +81,7 @@ msgid ""
 "you exit GIMP."
 msgstr ""
 "After you enabled &quot;Dynamic Keyboard Shortcuts&quot; in the Preferences "
-"dialog, you can reassign shortcut keys. Do so by bringing up the menu, "
+"dialogue, you can reassign shortcut keys. Do so by bringing up the menu, "
 "selecting a menu item, and pressing the desired key combination. If &quot;"
 "Save Keyboard Shortcuts&quot; is enabled, the key bindings are saved when "
 "you exit GIMP."
@@ -124,7 +124,7 @@ msgid ""
 "in an image window to hide or show the toolbox and other dialogs."
 msgstr ""
 "If your screen is too cluttered, you can press <tt>Tab</tt> multiple times "
-"in an image window to hide or show the toolbox and other dialogs."
+"in an image window to hide or show the toolbox and other dialogues."
 
 #: tips/gimp-tips.xml.in.h:13
 msgid ""
@@ -190,7 +190,7 @@ msgid ""
 "just like the shell. Type part of a filename, hit <tt>Tab</tt>, and voila, "
 "it's completed."
 msgstr ""
-"The file selection dialog box has command-line completion with <tt>Tab</tt>, "
+"The file selection dialogue box has command-line completion with <tt>Tab</tt>, "
 "just like the shell. Type part of a filename, hit <tt>Tab</tt>, and voila, "
 "it's completed."
 
@@ -204,7 +204,7 @@ msgstr ""
 "The layer named &quot;Background&quot; is special because it lacks "
 "transparency. This prevents you from adding a layer mask or moving the layer "
 "up in the stack. You may add transparency to it by right-clicking in the "
-"Layers dialog and selecting &quot;Add Alpha Channel&quot;."
+"Layers dialogue and selecting &quot;Add Alpha Channel&quot;."
 
 #: tips/gimp-tips.xml.in.h:21
 msgid ""
@@ -269,7 +269,7 @@ msgid ""
 "selections."
 msgstr ""
 "You can create and edit complex selections using the Path tool. The Paths "
-"dialog allows you to work on multiple paths and to convert them to "
+"dialogue allows you to work on multiple paths and to convert them to "
 "selections."
 
 #: tips/gimp-tips.xml.in.h:27
@@ -277,7 +277,7 @@ msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 msgstr ""
-"You can drag a layer from the Layers dialog and drop it onto the toolbox. "
+"You can drag a layer from the Layers dialogue and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 
 #: tips/gimp-tips.xml.in.h:28
@@ -314,7 +314,7 @@ msgid ""
 "a layer in the Layers dialog."
 msgstr ""
 "You can perform many layer operations by right-clicking on the text label of "
-"a layer in the Layers dialog."
+"a layer in the Layers dialogue."
 
 #: tips/gimp-tips.xml.in.h:32
 msgid ""
@@ -335,7 +335,7 @@ msgid ""
 msgstr ""
 "You can save a selection to a channel (Select-&gt;Save to Channel) and then "
 "modify this channel with any paint tools. Using the buttons in the Channels "
-"dialog, you can toggle the visibility of this new channel or convert it to a "
+"dialogue, you can toggle the visibility of this new channel or convert it to a "
 "selection."
 
 #: tips/gimp-tips.xml.in.h:34
