--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-02  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-10-01  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated.
