--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-03  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/ripple.c: Added a preview.
+
 2004-10-02  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/polar.c: use a GimpAspectPreview.
