--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-03  DindinX  <dindinx@gimp.org>
 
+	* plug-ins/common/blinds.c: use a GimpAspectPreview to make the
+	preview resizable.
+
+2004-10-03  DindinX  <dindinx@gimp.org>
+
 	* plug-ins/common/ripple.c: Added a preview.
 
 2004-10-02  DindinX  <dindinx@gimp.org>
