2004-10-03  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/pdb/color.pdb: export the Colorize tool to the PDB.
	Fixes bug #154368.

	* app/pdb/color_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpcolor_pdb.[ch]: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14946 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-10-03  Sven Neumann  <sven@gimp.org>
+
+	* tools/pdbgen/pdb/color.pdb: export the Colorize tool to the PDB.
+	Fixes bug #154368.
+
+	* app/pdb/color_cmds.c
+	* app/pdb/internal_procs.c
+	* libgimp/gimpcolor_pdb.[ch]: regenerated.
+
 2004-10-03  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/blinds.c: use a GimpAspectPreview to make the
