* plug-ins/common/whirlpinch.c: ported to GimpAspectPreview.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14947 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-03  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/whirlpinch.c: ported to GimpAspectPreview.
+
 2004-10-03  Sven Neumann  <sven@gimp.org>
 
 	* tools/pdbgen/pdb/color.pdb: export the Colorize tool to the PDB.
