2004-10-03  Michael Schumacher <schumaml@gmx.de>
	* plug-ins/dbbrowser/Makefile.am
	* plug-ins/script-fu/Makefile.am: moved the libgimpprocbrowser to
	the beginning of LDADD


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14950 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-03  Michael Schumacher <schumaml@gmx.de>
+
+	* plug-ins/dbbrowser/Makefile.am
+	* plug-ins/script-fu/Makefile.am: moved the libgimpprocbrowser to
+	the beginning of LDADD
+	
 2004-10-03  DindinX  <dindinx@gimp.org>
 
 	* libgimp/gimpaspectpreview.c: limit the size of the preview to 512
