--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-03  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/max_rgb.c: ported to GimpAspectPreview.
+
 2004-10-03  Michael Schumacher <schumaml@gmx.de>
 
 	* plug-ins/dbbrowser/Makefile.am
