* plug-ins/common/destripe.c: ported to GimpAspectPreview.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14953 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-10-03  DindinX  <dindinx@gimp.org>
 
+	* plug-ins/common/destripe.c: ported to GimpAspectPreview.
+
+2004-10-03  DindinX  <dindinx@gimp.org>
+
 	* plug-ins/common/nova.c: ported to GimpAspectPreview.
 
 2004-10-03  DindinX  <dindinx@gimp.org>
