--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpgradientmenu.c: handle allocation > requisition for
+	the gradient preview.
+
+	* plug-ins/script-fu/script-fu-interface.c: added a horizontal
+	size group for the left-aligned controls.
+
 2004-10-03  DindinX  <dindinx@gimp.org>
 
 	* plug-ins/common/destripe.c: ported to GimpAspectPreview.
