2004-10-04  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/scripts/asc2img.scm: a cleaned up version of
	the script contributed by Kevin Cozens (see bug #153900).

	* plug-ins/script-fu/scripts/predator.scm: applied patch by Kevin
	Cozens that fixes use of the script on original layer (bug #152678).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14957 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/scripts/asc2img.scm: a cleaned up version of
+	the script contributed by Kevin Cozens (see bug #153900).
+	
+	* plug-ins/script-fu/scripts/predator.scm: applied patch by Kevin
+	Cozens that fixes use of the script on original layer (bug #152678).
+
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/scripts/3d-outline.scm
 	* plug-ins/script-fu/scripts/blended-logo.scm
 	* plug-ins/script-fu/scripts/camo.scm
