--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-04  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimphelpui.c: untabified.
+
+	(gimp_help_callback): use GIMP_HELP_ID instead of "gimp-help-id".
+
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
