2004-10-04  Sven Neumann  <sven@gimp.org>
	* plug-ins/script-fu/script-fu-interface.c (script_fu_about):
	enabled line wrapping on labels.
	(script_fu_interface): substitute underscores by hyphens to
	generate the help_id from the procedure name.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14962 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/script-fu-interface.c (script_fu_about):
+	enabled line wrapping on labels.
+	(script_fu_interface): substitute underscores by hyphens to
+	generate the help_id from the procedure name.
+
 2004-10-04  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpbase/gimpwire.c: added assertions to make sure "count" is
