--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-interface.c (script_fu_about): set 
+	the help_func again (but not the help_id).
+
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/script-fu-interface.c (script_fu_about):
 	enabled line wrapping on labels.
 	(script_fu_interface): substitute underscores by hyphens to
-	generate the help_id from the procedure name.
+	generate the help-id from the procedure name.
 
 2004-10-04  Michael Natterer  <mitch@gimp.org>
 
