--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-04  DindinX  <dindinx@gimp.org>
+
+	* plug-ins/common/channel_mixer.c: Ported to GimpAspectPreview. This
+	addresses but not totally fixes bug #132194.
+
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimpguiconfig.[ch]
