--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpaspectpreview.c (gimp_aspect_preview_draw_buffer):
+	no need to set bpp before calling gimp_drawable_get_thumbnail_data().
+
 2004-10-04  DindinX  <dindinx@gimp.org>
 
 	* libgimp/gimpaspectpreview.c: (gimp_aspect_preview_draw_buffer) only
