--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-04  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/gimprc.pdb (gimprc_query, gimprc_set): disallow
+	the empty string as token. Spotted by Kevin Cozens.
+
+	* app/pdb/gimprc_cmds.c: regenerated.
+
 2004-10-04  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpaspectpreview.c (gimp_aspect_preview_draw_buffer):
