2004-10-04  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_area):
	take drawable offsets into account when masking the preview with
	the selection mask.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14969 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-10-04  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_area):
+	take drawable offsets into account when masking the preview with
+	the selection mask.
+
 2004-10-04  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/gimprc.pdb (gimprc_query, gimprc_set): disallow
